rm unused import

--- a/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
@@ -30,25 +30,13 @@
     "import numpy as np\n",
     "import rasterio\n",
     "import re\n",
-    "import tempfile\n",
     "import pyproj\n",
-    "import uuid\n",
-    "\n",
     "import rasterio.mask\n",
-    "from rasterio import Affine\n",
     "from rasterio.plot import reshape_as_raster\n",
-    "from rasterio.merge import merge\n",
-    "from rasterio.warp import calculate_default_transform, reproject, Resampling\n",
-    "\n",
     "from shapely import wkt\n",
-    "from shapely.geometry import Polygon, box\n",
     "from shapely.ops import transform\n",
-    "\n",
-    "\n",
-    "from pathlib import Path\n",
     "from datetime import datetime, timedelta\n",
-    "from sentinel2download.downloader import Sentinel2Downloader\n",
-    "from sentinel2download.overlap import Sentinel2Overlap"
+    "from sentinel2download.downloader import Sentinel2Downloader"
    ]
   },
   {
@@ -62,7 +50,6 @@
     "API_KEY = os.path.join(DATA_DIR, \".secret/sentinel2_google_api_key.json\")\n",
     "LOAD_DIR = os.path.join(DATA_DIR, \"satellite_imagery\")\n",
     "RESULTS_DIR = os.path.join(DATA_DIR, \"results/example/tci_ndvi\")\n",
-    "NOTEBOOK_DIR = os.path.join(DATA_DIR, \"notebooks/example/tci_ndvi\")\n",
     "\n",
     "COLORMAP_BRBG = os.path.join(BASE, \"ndvi_colormap.npy\") \n",
     "\n",
@@ -595,9 +582,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python37",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python37"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -609,7 +596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
