16482 add colormap legend

--- a/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
@@ -33,6 +33,7 @@
     "import tempfile\n",
     "import pyproj\n",
     "import uuid\n",
+    "import json\n",
     "\n",
     "import rasterio.mask\n",
     "from rasterio import Affine\n",
@@ -478,6 +479,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "colormap_tag = {\"name\": \"Vegetation index\", \"colors\": [], \"labels\": [\"low\", \"high\"]}\n",
+    "\n",
+    "for color in COLORS:\n",
+    "    color_str = \",\".join(list(map(lambda x: str(int(x)), color)))\n",
+    "    colormap_tag['colors'].append(color_str)\n",
+    "\n",
+    "colormap_tag = json.dumps(colormap_tag)\n",
+    "colormap_tag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def scale(ndvi, a=1, b=255, nodata=0.0):\n",
     "    # ndvi is in range [-1; 1], nodata is setted to 0.0 value. Be careful with comprassions!\n",
     "    min = -1 # np.nanmin(ndvi)\n",
@@ -556,7 +573,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def crop(input_path, output_path, polygon, date, request_id, name=None):\n",
+    "def crop(input_path, output_path, polygon, date, request_id, name=None, colormap=None):\n",
     "    with rasterio.open(input_path) as src:\n",
     "        out_image, out_transform = rasterio.mask.mask(src, [polygon], crop=True)\n",
     "        # print(out_transform)\n",
@@ -572,6 +589,8 @@
     "        dest.update_tags(start_date=date, end_date=date, request_id=request_id)\n",
     "        if name:\n",
     "            dest.update_tags(name=name)\n",
+    "        if colormap:\n",
+    "            dest.update_tags(colormap=colormap)\n",
     "        dest.write(out_image)"
    ]
   },
@@ -622,7 +641,7 @@
     "        transformed_poly = to_crs(polygon, tile_crs)\n",
     "        \n",
     "        # Crop and save NDVI\n",
-    "        crop(temp_ndvi_filename, temp_ndvi_filename, transformed_poly, acquired_date, REQUEST_ID, name=\"Sentinel-2 Vegetation Index (NDVI)\")\n",
+    "        crop(temp_ndvi_filename, temp_ndvi_filename, transformed_poly, acquired_date, REQUEST_ID, name=\"Sentinel-2 Vegetation Index (NDVI)\", colormap=colormap_tag)\n",
     "        # Crop and save TCI\n",
     "        crop(paths['TCI'], temp_tci_filename, transformed_poly, acquired_date, REQUEST_ID, name=\"Sentinel-2 RGB raster\")\n",
     "        \n",
