--- a/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
@@ -486,6 +486,8 @@
     "    colormap_tag['colors'].append(color_str)\n",
     "\n",
     "colormap_tag = json.dumps(colormap_tag)\n",
+    "# example of colormap_tag format\n",
+    "# {\"name\": \"Vegetation index\", \"colors\": [\"0,0,0\", \"255,0,0\", \"0,255,0\", \"0,0,255\" ...], \"labels\": [\"low\", \"high\"]}\n",
     "colormap_tag"
    ]
   },
