16570 add absent data geojson for full area

--- a/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
@@ -621,10 +621,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not filtered:\n",
-    "    raise ValueError(\"Images not loaded for given AOI. Change dates, constraints\")\n",
-    "    \n",
     "os.makedirs(RESULTS_DIR, exist_ok=True)\n",
+    "\n",
+    "if not filtered:\n",
+    "    geojson_path = os.path.join(RESULTS_DIR, \"aoi.geojson\")\n",
+    "    NO_DATA = 'No data'\n",
+    "    style = dict(color='red')\n",
+    "    feature = Feature(geometry=aoi.geometry[0], properties=dict(label=NO_DATA, style=style))\n",
+    "    feature['start_date'] = START_DATE\n",
+    "    feature['end_date'] = END_DATE\n",
+    "    \n",
+    "    with open(geojson_path, 'w') as f:\n",
+    "        geojson.dump(feature, f)\n",
+    "        \n",
+    "    raise ValueError(\"Images not loaded for given AOI. Change dates, constraints\")\n",
+    "\n",
     "\n",
     "for row in overlap_tiles.itertuples():\n",
     "    tile = row.tile\n",
