16570 fix import Feature from geojson module

--- a/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
@@ -35,6 +35,8 @@
     "import uuid\n",
     "import json\n",
     "\n",
+    "from geojson import Feature\n",
+    "\n",
     "import rasterio.mask\n",
     "from rasterio import Affine\n",
     "from rasterio.plot import reshape_as_raster\n",
