16570 add request id to geojson

--- a/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
@@ -632,6 +632,7 @@
     "    feature = Feature(geometry=aoi.geometry[0], properties=dict(label=NO_DATA, style=style))\n",
     "    feature['start_date'] = START_DATE\n",
     "    feature['end_date'] = END_DATE\n",
+    "    feature['request_id'] = REQUEST_ID\n",
     "    \n",
     "    with open(geojson_path, 'w') as f:\n",
     "        geojson.dump(feature, f)\n",
