16570 add import geojson lib in tci ndvi notebook

--- a/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
@@ -34,6 +34,7 @@
     "import pyproj\n",
     "import uuid\n",
     "import json\n",
+    "import geojson\n",
     "\n",
     "from geojson import Feature\n",
     "\n",
