--- a/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
@@ -629,11 +629,13 @@
     "if not filtered:\n",
     "    geojson_path = os.path.join(RESULTS_DIR, \"aoi.geojson\")\n",
     "    NO_DATA = 'No data'\n",
+    "    TCI_NDVI_NO_DATA = 'TCI_NDVI\\nNo data available'\n",
     "    style = dict(color='red')\n",
     "    feature = Feature(geometry=aoi.geometry[0], properties=dict(label=NO_DATA, style=style))\n",
     "    feature['start_date'] = START_DATE\n",
     "    feature['end_date'] = END_DATE\n",
     "    feature['request_id'] = REQUEST_ID\n",
+    "    feature['name'] = TCI_NDVI_NO_DATA\n",
     "    \n",
     "    with open(geojson_path, 'w') as f:\n",
     "        geojson.dump(feature, f)\n",
