16570 Add absent data (#218)
* 16570 add absent data geojson for full area

* 16570 fix import Feature from geojson module

* 16570 add request id to geojson

* 16570 add import geojson lib in tci ndvi notebook

* 16570 add name to geojson

--- a/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
@@ -34,6 +34,9 @@
     "import pyproj\n",
     "import uuid\n",
     "import json\n",
+    "import geojson\n",
+    "\n",
+    "from geojson import Feature\n",
     "\n",
     "import rasterio.mask\n",
     "from rasterio import Affine\n",
@@ -621,10 +624,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not filtered:\n",
-    "    raise ValueError(\"Images not loaded for given AOI. Change dates, constraints\")\n",
-    "    \n",
     "os.makedirs(RESULTS_DIR, exist_ok=True)\n",
+    "\n",
+    "if not filtered:\n",
+    "    geojson_path = os.path.join(RESULTS_DIR, \"aoi.geojson\")\n",
+    "    NO_DATA = 'No data'\n",
+    "    TCI_NDVI_NO_DATA = 'TCI_NDVI\\nNo data available'\n",
+    "    style = dict(color='red')\n",
+    "    feature = Feature(geometry=aoi.geometry[0], properties=dict(label=NO_DATA, style=style))\n",
+    "    feature['start_date'] = START_DATE\n",
+    "    feature['end_date'] = END_DATE\n",
+    "    feature['request_id'] = REQUEST_ID\n",
+    "    feature['name'] = TCI_NDVI_NO_DATA\n",
+    "    \n",
+    "    with open(geojson_path, 'w') as f:\n",
+    "        geojson.dump(feature, f)\n",
+    "        \n",
+    "    raise ValueError(\"Images not loaded for given AOI. Change dates, constraints\")\n",
+    "\n",
     "\n",
     "for row in overlap_tiles.itertuples():\n",
     "    tile = row.tile\n",
