--- a/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
@@ -482,18 +482,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = []\n",
+    "colormap_tag = {\"name\": \"Vegetation index\", \"colors\": [], \"labels\": [\"low\", \"high\"]}\n",
     "\n",
-    "for color_idx, color in enumerate(COLORS):\n",
+    "for color in COLORS:\n",
     "    color_str = \",\".join(list(map(lambda x: str(int(x)), color)))\n",
-    "    labels.append({\n",
-    "        \"color\": color_str,\n",
-    "        \"name\": color_idx,\n",
-    "    })\n",
-    "labels = json.dumps(labels)\n",
+    "    colormap_tag['colors'].append(color_str)\n",
+    "\n",
+    "colormap_tag = json.dumps(colormap_tag)\n",
     "# example of colormap_tag format\n",
-    "# [{\"color\": \"0,0,0\", \"name\": 0}, {\"color\": \"3,1,1\", \"name\": 1}, ...]\n",
-    "labels"
+    "# {\"name\": \"Vegetation index\", \"colors\": [\"0,0,0\", \"255,0,0\", \"0,255,0\", \"0,0,255\" ...], \"labels\": [\"low\", \"high\"]}\n",
+    "colormap_tag"
    ]
   },
   {
@@ -580,7 +578,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def crop(input_path, output_path, polygon, date, request_id, name=None, labels=None):\n",
+    "def crop(input_path, output_path, polygon, date, request_id, name=None, colormap=None):\n",
     "    with rasterio.open(input_path) as src:\n",
     "        out_image, out_transform = rasterio.mask.mask(src, [polygon], crop=True)\n",
     "        # print(out_transform)\n",
@@ -596,8 +594,8 @@
     "        dest.update_tags(start_date=date, end_date=date, request_id=request_id)\n",
     "        if name:\n",
     "            dest.update_tags(name=name)\n",
-    "        if labels:\n",
-    "            dest.update_tags(labels=labels)\n",
+    "        if colormap:\n",
+    "            dest.update_tags(colormap=colormap)\n",
     "        dest.write(out_image)"
    ]
   },
@@ -662,7 +660,7 @@
     "        transformed_poly = to_crs(polygon, tile_crs)\n",
     "        \n",
     "        # Crop and save NDVI\n",
-    "        crop(temp_ndvi_filename, temp_ndvi_filename, transformed_poly, acquired_date, REQUEST_ID, name=\"Sentinel-2 Vegetation Index (NDVI)\", labels=labels)\n",
+    "        crop(temp_ndvi_filename, temp_ndvi_filename, transformed_poly, acquired_date, REQUEST_ID, name=\"Sentinel-2 Vegetation Index (NDVI)\", colormap=colormap_tag)\n",
     "        # Crop and save TCI\n",
     "        crop(paths['TCI'], temp_tci_filename, transformed_poly, acquired_date, REQUEST_ID, name=\"Sentinel-2 RGB raster\")\n",
     "        \n",
