16734 fix passing colormap tag to labels

--- a/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
@@ -595,7 +595,7 @@
     "        if name:\n",
     "            dest.update_tags(name=name)\n",
     "        if colormap:\n",
-    "            dest.update_tags(colormap=colormap)\n",
+    "            dest.update_tags(labels=colormap)\n",
     "        dest.write(out_image)"
    ]
   },
