16742 add image stitching to tci_ndvi notebook

--- a/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
@@ -600,6 +600,103 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transform_crs(data_path, save_path, dst_crs=\"EPSG:4326\", resolution=(10, 10)):\n",
+    "    with rasterio.open(data_path) as src:\n",
+    "        if resolution is None:\n",
+    "            transform, width, height = calculate_default_transform(\n",
+    "                src.crs, dst_crs, src.width, src.height, *src.bounds\n",
+    "            )\n",
+    "        else:\n",
+    "            transform, width, height = calculate_default_transform(\n",
+    "                src.crs,\n",
+    "                dst_crs,\n",
+    "                src.width,\n",
+    "                src.height,\n",
+    "                *src.bounds,\n",
+    "                resolution=resolution,\n",
+    "            )\n",
+    "        kwargs = src.meta.copy()\n",
+    "        kwargs.update(\n",
+    "            {\"crs\": dst_crs, \"transform\": transform, \"width\": width, \"height\": height}\n",
+    "        )\n",
+    "        with rasterio.open(save_path, \"w\", **kwargs) as dst:\n",
+    "            for i in range(1, src.count + 1):\n",
+    "                reproject(\n",
+    "                    source=rasterio.band(src, i),\n",
+    "                    destination=rasterio.band(dst, i),\n",
+    "                    src_transform=src.transform,\n",
+    "                    src_crs=src.crs,\n",
+    "                    dst_transform=transform,\n",
+    "                    dst_crs=dst_crs,\n",
+    "                    resampling=Resampling.nearest,\n",
+    "                )\n",
+    "\n",
+    "    return save_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stitch_tiles(paths, out_raster_path):\n",
+    "    if not isinstance(paths[0], str):\n",
+    "        paths = [str(x) for x in paths]\n",
+    "    tiles = []\n",
+    "    tmp_files = []\n",
+    "    \n",
+    "    crs = None\n",
+    "    meta = None\n",
+    "    for i, path in enumerate(paths):\n",
+    "        if i == 0:\n",
+    "            file = rasterio.open(path)\n",
+    "            meta, crs = file.meta, file.crs\n",
+    "        else:\n",
+    "            tmp_path = path.replace(\n",
+    "                '.jp2', '_tmp.jp2').replace('.tif', '_tmp.tif')\n",
+    "            crs_transformed = transform_crs(path, tmp_path, \n",
+    "                                            dst_crs=crs, \n",
+    "                                            resolution=None)\n",
+    "            tmp_files.append(crs_transformed)\n",
+    "            file = rasterio.open(crs_transformed)\n",
+    "        tiles.append(file)\n",
+    "            \n",
+    "    tile_arr, transform = merge(tiles, method='last')\n",
+    "    \n",
+    "    meta.update({\"driver\": \"GTiff\",\n",
+    "                 \"height\": tile_arr.shape[1],\n",
+    "                 \"width\": tile_arr.shape[2],\n",
+    "                 \"transform\": transform,\n",
+    "                 \"crs\": crs})\n",
+    "    \n",
+    "    if '.jp2' in out_raster_path:\n",
+    "        out_raster_path = out_raster_path.replace('.jp2', '_merged.tif')\n",
+    "    else:\n",
+    "        out_raster_path = out_raster_path.replace('.tif', '_merged.tif')\n",
+    "    print(f'saved raster {out_raster_path}')\n",
+    "\n",
+    "    for tile in tiles:\n",
+    "        tile.close()\n",
+    "        \n",
+    "    for tmp_file in tmp_files:\n",
+    "        try:\n",
+    "            os.remove(tmp_file)\n",
+    "        except FileNotFoundError:\n",
+    "            print(f'Tile {tmp_file} was removed or renamed, skipping')\n",
+    "        \n",
+    "    with rasterio.open(out_raster_path, \"w\", **meta) as dst:\n",
+    "        dst.write(tile_arr)\n",
+    "    \n",
+    "    return out_raster_path"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -643,6 +740,8 @@
     "    raise ValueError(\"Images not loaded for given AOI. Change dates, constraints\")\n",
     "\n",
     "\n",
+    "tci_images = []\n",
+    "ndvi_images = []\n",
     "for row in overlap_tiles.itertuples():\n",
     "    tile = row.tile\n",
     "    polygon = row.geometry\n",
@@ -671,9 +770,18 @@
     "        print(f\"{tile}: Rename {temp_ndvi_filename}->{ndvi_filename}\\n {temp_tci_filename}->{tci_filename}\")\n",
     "        os.rename(temp_ndvi_filename, ndvi_filename)\n",
     "        os.rename(temp_tci_filename, tci_filename)\n",
-    "        \n",
+    "        tci_images.append(tci_filename)\n",
+    "        ndvi_images.append(ndvi_filename)\n",
     "    except Exception as e:\n",
-    "        print(f\"{tile}: Cannot calculate TCI, NDVI: {str(e)}\")"
+    "        print(f\"{tile}: Cannot calculate TCI, NDVI: {str(e)}\")\n",
+    "\n",
+    "if len(tci_images) > 1:\n",
+    "    name = str(REQUEST_ID) + \"_\" + '-'.join(filtered.keys())\n",
+    "    tci_full = stitch_tiles(tci_images, os.path.join(RESULTS_DIR, name + \"_TCI.tif\"))\n",
+    "    ndvi_full = stitch_tiles(ndvi_images, os.path.join(RESULTS_DIR, name + \"_NDVI.tif\"))\n",
+    "    for i in range(len(tci_images)):\n",
+    "        os.remove(tci_images[i])\n",
+    "        os.remove(ndvi_images[i])"
    ]
   },
   {
