16742 add updating tags for tci and ndvi images

--- a/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
@@ -645,7 +645,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def stitch_tiles(paths, out_raster_path):\n",
+    "def stitch_tiles(paths, out_raster_path, date, request_id, name=None, colormap=None):\n",
     "    if not isinstance(paths[0], str):\n",
     "        paths = [str(x) for x in paths]\n",
     "    tiles = []\n",
@@ -676,9 +676,7 @@
     "                 \"crs\": crs})\n",
     "    \n",
     "    if '.jp2' in out_raster_path:\n",
-    "        out_raster_path = out_raster_path.replace('.jp2', '_merged.tif')\n",
-    "    else:\n",
-    "        out_raster_path = out_raster_path.replace('.tif', '_merged.tif')\n",
+    "        out_raster_path = out_raster_path.replace('.jp2', '.tif')\n",
     "    print(f'saved raster {out_raster_path}')\n",
     "\n",
     "    for tile in tiles:\n",
@@ -691,6 +689,11 @@
     "            print(f'Tile {tmp_file} was removed or renamed, skipping')\n",
     "        \n",
     "    with rasterio.open(out_raster_path, \"w\", **meta) as dst:\n",
+    "        dst.update_tags(start_date=date, end_date=date, request_id=request_id)\n",
+    "        if name:\n",
+    "            dst.update_tags(name=name)\n",
+    "        if colormap:\n",
+    "            dst.update_tags(colormap=colormap)\n",
     "        dst.write(tile_arr)\n",
     "    \n",
     "    return out_raster_path"
@@ -776,9 +779,9 @@
     "        print(f\"{tile}: Cannot calculate TCI, NDVI: {str(e)}\")\n",
     "\n",
     "if len(tci_images) > 1:\n",
-    "    name = str(REQUEST_ID) + \"_\" + '-'.join(filtered.keys())\n",
-    "    tci_full = stitch_tiles(tci_images, os.path.join(RESULTS_DIR, name + \"_TCI.tif\"))\n",
-    "    ndvi_full = stitch_tiles(ndvi_images, os.path.join(RESULTS_DIR, name + \"_NDVI.tif\"))\n",
+    "    base_filename = f\"{REQUEST_ID}_{'-'.join(filtered.keys())}_{acquired_date}\"\n",
+    "    tci_full = stitch_tiles(tci_images, os.path.join(RESULTS_DIR, base_filename + \"_TCI.tif\"), acquired_date, REQUEST_ID, name=\"Sentinel-2 Vegetation Index (NDVI)\", colormap=colormap_tag)\n",
+    "    ndvi_full = stitch_tiles(ndvi_images, os.path.join(RESULTS_DIR, base_filename + \"_NDVI.tif\"), acquired_date, REQUEST_ID, name=\"Sentinel-2 RGB raster\")\n",
     "    for i in range(len(tci_images)):\n",
     "        os.remove(tci_images[i])\n",
     "        os.remove(ndvi_images[i])"
