16765 add dump geojson for tiles if no data available for them

--- a/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
@@ -748,6 +748,19 @@
     "for row in overlap_tiles.itertuples():\n",
     "    tile = row.tile\n",
     "    polygon = row.geometry\n",
+    "    if not tile in filtered:\n",
+    "        geojson_path = os.path.join(RESULTS_DIR, \"%s_aoi.geojson\" % tile)\n",
+    "        NO_DATA = 'No data'\n",
+    "        TCI_NDVI_NO_DATA = 'TCI_NDVI\\nNo data available'\n",
+    "        style = dict(color='red')\n",
+    "        feature = Feature(geometry=polygon, properties=dict(label=NO_DATA, style=style))\n",
+    "        feature['start_date'] = START_DATE\n",
+    "        feature['end_date'] = END_DATE\n",
+    "        feature['request_id'] = REQUEST_ID\n",
+    "        feature['name'] = TCI_NDVI_NO_DATA\n",
+    "\n",
+    "        with open(geojson_path, 'w') as f:\n",
+    "            geojson.dump(feature, f)\n",
     "    \n",
     "    try:\n",
     "        paths = filtered[tile]['paths']\n",
