16742 fix updating tags ndvi images

--- a/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
@@ -780,8 +780,8 @@
     "\n",
     "if len(tci_images) > 1:\n",
     "    base_filename = f\"{REQUEST_ID}_{'-'.join(filtered.keys())}_{acquired_date}\"\n",
-    "    tci_full = stitch_tiles(tci_images, os.path.join(RESULTS_DIR, base_filename + \"_TCI.tif\"), acquired_date, REQUEST_ID, name=\"Sentinel-2 Vegetation Index (NDVI)\", colormap=colormap_tag)\n",
-    "    ndvi_full = stitch_tiles(ndvi_images, os.path.join(RESULTS_DIR, base_filename + \"_NDVI.tif\"), acquired_date, REQUEST_ID, name=\"Sentinel-2 RGB raster\")\n",
+    "    tci_full = stitch_tiles(tci_images, os.path.join(RESULTS_DIR, base_filename + \"_TCI.tif\"), acquired_date, REQUEST_ID, name=\"Sentinel-2 RGB raster\")\n",
+    "    ndvi_full = stitch_tiles(ndvi_images, os.path.join(RESULTS_DIR, base_filename + \"_NDVI.tif\"), acquired_date, REQUEST_ID, name=\"Sentinel-2 Vegetation Index (NDVI)\", colormap=colormap_tag)\n",
     "    for i in range(len(tci_images)):\n",
     "        os.remove(tci_images[i])\n",
     "        os.remove(ndvi_images[i])"
