16765 fix stitch empty tile (#242)
* 16765 add dump geojson for tiles if no data available for them

* 16765 add method to dump no data geojson

--- a/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
@@ -700,6 +700,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dump_no_data_geosjon(polygon, geojson_path):\n",
+    "    NO_DATA = 'No data'\n",
+    "    TCI_NDVI_NO_DATA = 'TCI_NDVI\\nNo data available'\n",
+    "    style = dict(color='red')\n",
+    "    feature = Feature(geometry=polygon, properties=dict(label=NO_DATA, style=style))\n",
+    "    feature['start_date'] = START_DATE\n",
+    "    feature['end_date'] = END_DATE\n",
+    "    feature['request_id'] = REQUEST_ID\n",
+    "    feature['name'] = TCI_NDVI_NO_DATA\n",
+    "    \n",
+    "    with open(geojson_path, 'w') as f:\n",
+    "        geojson.dump(feature, f)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -728,18 +748,7 @@
     "\n",
     "if not filtered:\n",
     "    geojson_path = os.path.join(RESULTS_DIR, \"aoi.geojson\")\n",
-    "    NO_DATA = 'No data'\n",
-    "    TCI_NDVI_NO_DATA = 'TCI_NDVI\\nNo data available'\n",
-    "    style = dict(color='red')\n",
-    "    feature = Feature(geometry=aoi.geometry[0], properties=dict(label=NO_DATA, style=style))\n",
-    "    feature['start_date'] = START_DATE\n",
-    "    feature['end_date'] = END_DATE\n",
-    "    feature['request_id'] = REQUEST_ID\n",
-    "    feature['name'] = TCI_NDVI_NO_DATA\n",
-    "    \n",
-    "    with open(geojson_path, 'w') as f:\n",
-    "        geojson.dump(feature, f)\n",
-    "        \n",
+    "    dump_no_data_geosjon(aoi.geometry[0], geojson_path)    \n",
     "    raise ValueError(\"Images not loaded for given AOI. Change dates, constraints\")\n",
     "\n",
     "\n",
@@ -748,6 +757,10 @@
     "for row in overlap_tiles.itertuples():\n",
     "    tile = row.tile\n",
     "    polygon = row.geometry\n",
+    "    if not tile in filtered:\n",
+    "        tile_geojson_path = os.path.join(RESULTS_DIR, \"%s_aoi.geojson\" % tile)\n",
+    "        print(\"No data loaded for tile\", tile)\n",
+    "        dump_no_data_geosjon(polygon, tile_geojson_path)    \n",
     "    \n",
     "    try:\n",
     "        paths = filtered[tile]['paths']\n",
