19080 set delete temp files True

--- a/data/notebooks/planet_downloader/planet_order.ipynb
+++ b/data/notebooks/planet_downloader/planet_order.ipynb
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualizer = Pv(archive_path, TEMP_DIR, RESULTS_DIR, delete_temp=False)\n",
+    "visualizer = Pv(archive_path, TEMP_DIR, RESULTS_DIR, delete_temp=True)\n",
     "visualizer.set_max_timeout_for_img_generation(2000)\n",
     "output_path = visualizer.run()"
    ]
