--- a/data/notebooks/planet_downloader/planet_order.ipynb
+++ b/data/notebooks/planet_downloader/planet_order.ipynb
@@ -25,6 +25,7 @@
     "NB_USER = os.getenv('NB_USER')\n",
     "DATA_DIR = Path(f\"/home/{NB_USER}/work\")\n",
     "\n",
+    "PLANET_API_KEY = '123'\n",
     "API_KEY_DIR = DATA_DIR / \".secret/planet_api_key.json\"\n",
     "LOAD_DIR = DATA_DIR / \"satellite_imagery\"\n",
     "RESULTS_DIR = DATA_DIR / \"results/planet_downloader\" / str(REQUEST_ID)\n",
@@ -41,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "downloader = PoD(API_KEY_DIR, LOAD_DIR)\n",
+    "downloader = PoD(PLANET_API_KEY, LOAD_DIR)\n",
     "downloader.set_order_id(ORDER_ID)\n",
     "downloader.poll_for_success()\n",
     "order_name, order_archive_name = downloader.get_order_info()\n",
@@ -78,7 +79,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -92,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
