[19057] chanhged position of variables and fixed proccessor code bug

--- a/data/notebooks/planet_downloader/planet_order.ipynb
+++ b/data/notebooks/planet_downloader/planet_order.ipynb
@@ -12,7 +12,8 @@
     "from planet_processing import PlanetOrderDownloader as PoD, PlanetVisualizer as Pv\n",
     "\n",
     "REQUEST_ID = 0\n",
-    "ORDER_ID = None"
+    "ORDER_ID = None\n",
+    "PLANET_API_KEY = '123'"
    ]
   },
   {
@@ -25,14 +26,13 @@
     "NB_USER = os.getenv('NB_USER')\n",
     "DATA_DIR = Path(f\"/home/{NB_USER}/work\")\n",
     "\n",
-    "PLANET_API_KEY = '123'\n",
+    "\n",
     "API_KEY_DIR = DATA_DIR / \".secret/planet_api_key.json\"\n",
     "LOAD_DIR = DATA_DIR / \"satellite_imagery\"\n",
     "RESULTS_DIR = DATA_DIR / \"results/planet_downloader\" / str(REQUEST_ID)\n",
     "TEMP_DATA_DIR = DATA_DIR / 'temp'\n",
     "\n",
     "TEMP_DIR = TEMP_DATA_DIR / ORDER_ID\n",
-    "RESULTS_DIR.mkdir(parents=True, exist_ok=True)\n",
     "TEMP_DIR.mkdir(parents=True, exist_ok=True)"
    ]
   },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,13 +68,6 @@
     "visualizer.set_max_timeout_for_img_generation(2000)\n",
     "output_path = visualizer.run()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
