[19057] added start_date and end_date variables added, updating of tags using added variables

--- a/data/notebooks/planet_downloader/planet_order.ipynb
+++ b/data/notebooks/planet_downloader/planet_order.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
@@ -12,19 +14,26 @@
     "from planet_processing import PlanetOrderDownloader as PoD, PlanetVisualizer as Pv\n",
     "\n",
     "REQUEST_ID = 0\n",
-    "ORDER_ID = None\n",
-    "PLANET_API_KEY = '123'"
+    "START_DATE = '2021-12-26'\n",
+    "END_DATE = '2022-04-29'\n",
+    "ORDER_ID = '0753a164-3775-4c47-b4e6-b8e38e9d2295'\n",
+    "PLANET_API_KEY = 'PLAK8b275ed2feab4db49e90ca77af81c060'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "NAME = \"Planet Downloader\"\n",
     "NB_USER = os.getenv('NB_USER')\n",
-    "DATA_DIR = Path(f\"/home/{NB_USER}/work\")\n",
+    "DATA_DIR = Path(f\"/home/quantum/result\")\n",
     "\n",
     "\n",
     "API_KEY_DIR = DATA_DIR / \".secret/planet_api_key.json\"\n",
@@ -38,9 +47,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Order 0753a164-3775-4c47-b4e6-b8e38e9d2295 is success.\n",
+      "downloaded size: 2157051230\n",
+      "order_archive_size: 2157051230\n",
+      "downloading Pripyat-2022-02-26-Skysat_skysatcollect_pansharpened_udm2.zip to /home/quantum/result/satellite_imagery/0753a164-3775-4c47-b4e6-b8e38e9d2295/Pripyat-2022-02-26-Skysat_skysatcollect_pansharpened_udm2.zip\n",
+      "File /home/quantum/result/satellite_imagery/0753a164-3775-4c47-b4e6-b8e38e9d2295/Pripyat-2022-02-26-Skysat_skysatcollect_pansharpened_udm2.zip was downloaded\n"
+     ]
+    }
+   ],
    "source": [
     "downloader = PoD(PLANET_API_KEY, LOAD_DIR)\n",
     "downloader.set_order_id(ORDER_ID)\n",
@@ -52,7 +78,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "archive_path = LOAD_DIR / ORDER_ID / order_archive_name"
@@ -67,6 +95,17 @@
     "visualizer = Pv(archive_path, TEMP_DIR, RESULTS_DIR, delete_temp=True)\n",
     "visualizer.set_max_timeout_for_img_generation(2000)\n",
     "output_path = visualizer.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with rasterio.open(output_path, \"r+\") as dst:\n",
+    "        dst.update_tags(start_date=START_DATE, end_date=END_DATE, request_id=REQUEST_ID)\n",
+    "       "
    ]
   }
  ],
