--- a/data/notebooks/planet_downloader/planet_order.ipynb
+++ b/data/notebooks/planet_downloader/planet_order.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "NAME = \"Planet Downloader\"\n",
     "NB_USER = os.getenv('NB_USER')\n",
-    "DATA_DIR = Path(f\"/home/quantum/result\")\n",
+    "DATA_DIR = Path(f\"/home/{NB_USER}/result\")\n",
     "\n",
     "\n",
     "API_KEY_DIR = DATA_DIR / \".secret/planet_api_key.json\"\n",
