[19057] cleared downloader notebook

--- a/data/notebooks/planet_downloader/planet_order.ipynb
+++ b/data/notebooks/planet_downloader/planet_order.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -22,12 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -47,26 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Order 0753a164-3775-4c47-b4e6-b8e38e9d2295 is success.\n",
-      "downloaded size: 2157051230\n",
-      "order_archive_size: 2157051230\n",
-      "downloading Pripyat-2022-02-26-Skysat_skysatcollect_pansharpened_udm2.zip to /home/quantum/result/satellite_imagery/0753a164-3775-4c47-b4e6-b8e38e9d2295/Pripyat-2022-02-26-Skysat_skysatcollect_pansharpened_udm2.zip\n",
-      "File /home/quantum/result/satellite_imagery/0753a164-3775-4c47-b4e6-b8e38e9d2295/Pripyat-2022-02-26-Skysat_skysatcollect_pansharpened_udm2.zip was downloaded\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "downloader = PoD(PLANET_API_KEY, LOAD_DIR)\n",
     "downloader.set_order_id(ORDER_ID)\n",
@@ -77,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
