[19057] added "name" tag, chganged output_path to result path( temp path was early), added exception in case orderid is not valid

--- a/data/notebooks/planet_downloader/planet_order.ipynb
+++ b/data/notebooks/planet_downloader/planet_order.ipynb
@@ -11,12 +11,14 @@
     "from pathlib import Path\n",
     "import os\n",
     "\n",
+    "import rasterio\n",
+    "\n",
     "from planet_processing import PlanetOrderDownloader as PoD, PlanetVisualizer as Pv\n",
     "\n",
     "REQUEST_ID = 0\n",
     "START_DATE = '2021-12-26'\n",
     "END_DATE = '2022-04-29'\n",
-    "ORDER_ID = '0753a164-3775-4c47-b4e6-b8e38e9d2295'\n",
+    "ORDERID = None\n",
     "PLANET_API_KEY = 'PLAK8b275ed2feab4db49e90ca77af81c060'"
    ]
   },
@@ -38,7 +40,7 @@
     "RESULTS_DIR = DATA_DIR / \"results/planet_downloader\" / str(REQUEST_ID)\n",
     "TEMP_DATA_DIR = DATA_DIR / 'temp'\n",
     "\n",
-    "TEMP_DIR = TEMP_DATA_DIR / ORDER_ID\n",
+    "TEMP_DIR = TEMP_DATA_DIR / ORDERID\n",
     "TEMP_DIR.mkdir(parents=True, exist_ok=True)"
    ]
   },
@@ -51,7 +53,7 @@
    "outputs": [],
    "source": [
     "downloader = PoD(PLANET_API_KEY, LOAD_DIR)\n",
-    "downloader.set_order_id(ORDER_ID)\n",
+    "downloader.set_order_id(ORDERID)\n",
     "downloader.poll_for_success()\n",
     "order_name, order_archive_name = downloader.get_order_info()\n",
     "downloader.download_order_archive()"
@@ -65,7 +67,7 @@
    },
    "outputs": [],
    "source": [
-    "archive_path = LOAD_DIR / ORDER_ID / order_archive_name"
+    "archive_path = LOAD_DIR / ORDERID / order_archive_name"
    ]
   },
   {
@@ -86,9 +88,16 @@
    "outputs": [],
    "source": [
     "with rasterio.open(output_path, \"r+\") as dst:\n",
-    "        dst.update_tags(start_date=START_DATE, end_date=END_DATE, request_id=REQUEST_ID)\n",
+    "        dst.update_tags(start_date=START_DATE, end_date=END_DATE, request_id=REQUEST_ID, name=Path(output_path).stem)\n",
     "       "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
