[19057] added handling of case with invalid ORDER ID and save response about this case

--- a/data/notebooks/planet_downloader/planet_order.ipynb
+++ b/data/notebooks/planet_downloader/planet_order.ipynb
@@ -12,13 +12,15 @@
     "import os\n",
     "\n",
     "import rasterio\n",
+    "import shapely\n",
     "\n",
     "from planet_processing import PlanetOrderDownloader as PoD, PlanetVisualizer as Pv\n",
     "\n",
     "REQUEST_ID = 0\n",
+    "AOI = 'POLYGON ((29.912338 51.192255, 29.912338 51.481811, 30.459595 51.481811, 30.459595 51.192255, 29.912338 51.192255))'\n",
     "START_DATE = '2021-12-26'\n",
     "END_DATE = '2022-04-29'\n",
-    "ORDERID = None\n",
+    "ORDERID = '0753a164-3775-4c47-b4e6-b8e38e9d2295'\n",
     "PLANET_API_KEY = 'PLAK8b275ed2feab4db49e90ca77af81c060'"
    ]
   },
@@ -32,8 +34,8 @@
    "source": [
     "NAME = \"Planet Downloader\"\n",
     "NB_USER = os.getenv('NB_USER')\n",
-    "DATA_DIR = Path(f\"/home/{NB_USER}/work\")\n",
-    "\n",
+    "#DATA_DIR = Path(f\"/home/{NB_USER}/work\")\n",
+    "DATA_DIR = Path(f\"/home/quantum/result\")\n",
     "\n",
     "API_KEY_DIR = DATA_DIR / \".secret/planet_api_key.json\"\n",
     "LOAD_DIR = DATA_DIR / \"satellite_imagery\"\n",
@@ -47,12 +49,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "polygon_aoi = shapely.wkt.loads(AOI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "downloader = PoD(PLANET_API_KEY, LOAD_DIR)\n",
+    "downloader = PoD(PLANET_API_KEY, LOAD_DIR, polygon_aoi)\n",
     "downloader.set_order_id(ORDERID)\n",
     "downloader.poll_for_success()\n",
     "order_name, order_archive_name = downloader.get_order_info()\n",
