--- a/data/notebooks/planet_downloader/planet_order.ipynb
+++ b/data/notebooks/planet_downloader/planet_order.ipynb
@@ -20,7 +20,7 @@
     "AOI = 'POLYGON ((29.912338 51.192255, 29.912338 51.481811, 30.459595 51.481811, 30.459595 51.192255, 29.912338 51.192255))'\n",
     "START_DATE = '2021-12-26'\n",
     "END_DATE = '2022-04-29'\n",
-    "ORDERID = '0753a164-3775-4c47-b4e6-b8e38e9d2295'\n",
+    "ORDER_ID = '0753a164-3775-4c47-b4e6-b8e38e9d2295'\n",
     "PLANET_API_KEY = 'PLAK8b275ed2feab4db49e90ca77af81c060'"
    ]
   },
@@ -34,15 +34,15 @@
    "source": [
     "NAME = \"Planet Downloader\"\n",
     "NB_USER = os.getenv('NB_USER')\n",
-    "#DATA_DIR = Path(f\"/home/{NB_USER}/work\")\n",
-    "DATA_DIR = Path(f\"/home/quantum/result\")\n",
+    "DATA_DIR = Path(f\"/home/{NB_USER}/work\")\n",
+    "\n",
     "\n",
     "API_KEY_DIR = DATA_DIR / \".secret/planet_api_key.json\"\n",
     "LOAD_DIR = DATA_DIR / \"satellite_imagery\"\n",
     "RESULTS_DIR = DATA_DIR / \"results/planet_downloader\" / str(REQUEST_ID)\n",
     "TEMP_DATA_DIR = DATA_DIR / 'temp'\n",
     "\n",
-    "TEMP_DIR = TEMP_DATA_DIR / ORDERID\n",
+    "TEMP_DIR = TEMP_DATA_DIR / ORDER_ID\n",
     "TEMP_DIR.mkdir(parents=True, exist_ok=True)"
    ]
   },
@@ -64,7 +64,7 @@
    "outputs": [],
    "source": [
     "downloader = PoD(PLANET_API_KEY, LOAD_DIR, polygon_aoi)\n",
-    "downloader.set_order_id(ORDERID)\n",
+    "downloader.set_order_id(ORDER_ID)\n",
     "downloader.poll_for_success()\n",
     "order_name, order_archive_name = downloader.get_order_info()\n",
     "downloader.download_order_archive()"
@@ -78,7 +78,7 @@
    },
    "outputs": [],
    "source": [
-    "archive_path = LOAD_DIR / ORDERID / order_archive_name"
+    "archive_path = LOAD_DIR / ORDER_ID / order_archive_name"
    ]
   },
   {
