--- a/data/notebooks/planet_downloader/planet_order.ipynb
+++ b/data/notebooks/planet_downloader/planet_order.ipynb
@@ -3,23 +3,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import os\n",
     "\n",
+    "import rasterio\n",
+    "import shapely\n",
+    "\n",
     "from planet_processing import PlanetOrderDownloader as PoD, PlanetVisualizer as Pv\n",
     "\n",
     "REQUEST_ID = 0\n",
-    "ORDER_ID = None\n",
-    "PLANET_API_KEY = '123'"
+    "AOI = 'POLYGON ((29.912338 51.192255, 29.912338 51.481811, 30.459595 51.481811, 30.459595 51.192255, 29.912338 51.192255))'\n",
+    "START_DATE = '2021-12-26'\n",
+    "END_DATE = '2022-04-29'\n",
+    "ORDER_ID = '0753a164-3775-4c47-b4e6-b8e38e9d2295'\n",
+    "PLANET_API_KEY = 'PLAK8b275ed2feab4db49e90ca77af81c060'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "NAME = \"Planet Downloader\"\n",
@@ -42,7 +52,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "downloader = PoD(PLANET_API_KEY, LOAD_DIR)\n",
+    "polygon_aoi = shapely.wkt.loads(AOI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "downloader = PoD(PLANET_API_KEY, LOAD_DIR, polygon_aoi)\n",
     "downloader.set_order_id(ORDER_ID)\n",
     "downloader.poll_for_success()\n",
     "order_name, order_archive_name = downloader.get_order_info()\n",
@@ -51,8 +72,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "archive_path = LOAD_DIR / ORDER_ID / order_archive_name"
@@ -68,6 +91,24 @@
     "visualizer.set_max_timeout_for_img_generation(2000)\n",
     "output_path = visualizer.run()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with rasterio.open(output_path, \"r+\") as dst:\n",
+    "        dst.update_tags(start_date=START_DATE, end_date=END_DATE, request_id=REQUEST_ID, name=Path(output_path).stem)\n",
+    "       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
