[19057] removed real value from order_id and planet_api_key

--- a/data/notebooks/planet_downloader/planet_order.ipynb
+++ b/data/notebooks/planet_downloader/planet_order.ipynb
@@ -17,11 +17,11 @@
     "from planet_processing import PlanetOrderDownloader as PoD, PlanetVisualizer as Pv\n",
     "\n",
     "REQUEST_ID = 0\n",
-    "AOI = 'POLYGON ((29.912338 51.192255, 29.912338 51.481811, 30.459595 51.481811, 30.459595 51.192255, 29.912338 51.192255))'\n",
-    "START_DATE = '2021-12-26'\n",
-    "END_DATE = '2022-04-29'\n",
-    "ORDER_ID = '0753a164-3775-4c47-b4e6-b8e38e9d2295'\n",
-    "PLANET_API_KEY = 'PLAK8b275ed2feab4db49e90ca77af81c060'"
+    "AOI = 'POLYGON ((-85.483932 40.367801, -85.64349199999999 40.367801, -85.64349199999999 40.226597, -85.483932 40.226597, -85.483932 40.367801))'\n",
+    "START_DATE = '2020-04-01'\n",
+    "END_DATE = '2020-09-01'\n",
+    "ORDER_ID = ''\n",
+    "PLANET_API_KEY = ''"
    ]
   },
   {
@@ -35,7 +35,6 @@
     "NAME = \"Planet Downloader\"\n",
     "NB_USER = os.getenv('NB_USER')\n",
     "DATA_DIR = Path(f\"/home/{NB_USER}/work\")\n",
-    "\n",
     "\n",
     "API_KEY_DIR = DATA_DIR / \".secret/planet_api_key.json\"\n",
     "LOAD_DIR = DATA_DIR / \"satellite_imagery\"\n",
